--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,6 +116,34 @@ section {
     max-width: 60%;
   }
 }
+/* Pantallas pequeñas (celulares) */
+@media (max-width: 575px) {
+  .section-header h2 {
+    font-size: 20px; /* Tamaño de fuente para pantallas pequeñas (celulares) */
+  }
+}
+
+/* Pantallas medianas (tabletas pequeñas) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .section-header h2 {
+    font-size: 28px; /* Tamaño de fuente para pantallas medianas (tabletas pequeñas) */
+  }
+}
+
+/* Pantallas medianas (tabletas grandes) */
+@media (min-width: 768px) and (max-width: 991px) {
+  .section-header h2 {
+    font-size: 30px; /* Tamaño de fuente para pantallas medianas (tabletas grandes) */
+  }
+}
+
+/* Pantallas grandes (computadoras) */
+@media (min-width: 992px) {
+  .section-header h2 {
+    font-size: 32px; /* Tamaño de fuente para pantallas grandes (computadoras) */
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -278,6 +306,34 @@ section {
 
 .header .logo h1 span {
   color: var(--color-primary);
+}
+/* Consulta de medios para pantallas con un ancho máximo de 320px */
+@media (max-width: 320px) {
+  .header {
+    padding: 15px 0; /* Ajusta el padding para pantallas aún más pequeñas */
+  }
+
+  .header .logo img {
+    max-height: 20px; /* Ajusta el tamaño del logo para pantallas aún más pequeñas */
+  }
+
+  .header .logo h1 {
+    font-size: 16px; /* Ajusta el tamaño de la fuente para pantallas aún más pequeñas */
+  }
+}
+/* Consulta de medios para pantallas con un ancho máximo de 768px (pantallas medianas de celular) */
+@media (max-width: 768px) {
+  .header {
+    padding: 15px 0; /* Ajusta el padding para pantallas medianas de celular */
+  }
+
+  .header .logo img {
+    max-height: 22px; /* Ajusta el tamaño del logo para pantallas medianas de celular */
+  }
+
+  .header .logo h1 {
+    font-size: 20px; /* Ajusta el tamaño de la fuente para pantallas medianas de celular */
+  }
 }
 
 /*--------------------------------------------------------------
@@ -1841,9 +1897,8 @@ section {
   transform: scale(1.1);
 }
 
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
+
+
 .hero {
   overflow-x: hidden;
   padding: 0;
@@ -1957,11 +2012,25 @@ section {
     padding-right: 15px;
   }
 }
-
+/* Media query para pantallas con una resolución de 320x542 */
+@media (max-width: 320px) and (max-height: 542px) {
+  .hero .carousel-control-prev {
+    padding-left: 15px;
+  }
+  .hero .carousel-control-next {
+    padding-right: 15px;
+  }
+  .hero .info h2 {
+    font-size: 25px;
+  }
+  .hero .info p{
+    font-size: 15px;
+  }
+}
 .hero .carousel-control-next-icon,
 .hero .carousel-control-prev-icon {
   background: none;
-  font-size: 26px;
+  font-size: 20px;
   line-height: 0;
   background: rgba(255, 255, 255, 0.2);
   color: rgba(255, 255, 255, 0.6);
@@ -2572,6 +2641,7 @@ section {
   font-size: 14px;
   padding: 80px 0 60px 0;
   position: relative;
+  text-align: center;
 }
 
 .footer:before {
@@ -2617,11 +2687,13 @@ section {
   width: 36px;
   height: 36px;
   transition: 0.3s;
+ 
 }
 
 .footer .footer-content .social-links a:hover {
   background: var(--color-primary);
   text-decoration: none;
+  
 }
 
 .footer .footer-content h4 {
@@ -2678,7 +2750,7 @@ section {
 /* Estilos generales para los iconos sociales */
 .social-icons {
   position:absolute;
-  right: 15px; /* Ajusta la distancia desde el borde derecho según tus preferencias */
+  right: 120px; /* Ajusta la distancia desde el borde derecho según tus preferencias */
   z-index: 999; /* Asegura que los iconos estén por encima de otros elementos */
   display: flex;
   justify-content: center;
@@ -2695,11 +2767,40 @@ section {
 /* Media query para pantallas con una resolución de 412x915 */
 @media (max-width: 412px) {
   .social-icons {
-      top: 10; /* Asegura que los iconos estén en la parte superior de la página */
+      top: 0; /* Asegura que los iconos estén en la parte superior de la página */
       position: absolute;
+  }
+    /* Ajusta el tamaño de los iconos */
+    .social-icons i {
+      font-size: 15px; /* Tamaño de fuente más pequeño para los iconos */
+    }
+  
+}
+/* Media query para pantallas con una resolución de 425x564 */
+@media (max-width: 425px) and (max-height: 564px) {
+  .social-icons {
+    top: 0; /* Asegura que los iconos estén en la parte superior de la página */
+    position: absolute;
   }
 }
 
+
+/* Media query para pantallas con una resolución de 320x542 */
+@media (max-width: 320px) and (max-height: 542px) {
+  
+  .social-icons {
+      top:0; /* Asegura que los iconos estén en la parte superior de la página */
+      position: absolute;
+      
+  }
+}
+/* Media query para pantallas con una resolución de 280x653 */
+@media (max-width: 280px) and (max-height: 653px) {
+  .social-icons {
+      top: 0px; /* Asegura que los iconos estén en la parte superior de la página */
+      position: absolute;
+  }
+}
 
 
 
@@ -2777,4 +2878,75 @@ contact-info {
 }
 .contact-form {
   background-color: yellow;
+}
+/* Estilos para pantallas con una resolución de 320x542 */
+@media (max-width: 320px) {
+  .col-lg-6 {
+    width: 100%; /* Hacer que la columna ocupe todo el ancho en esta resolución */
+  }
+  .info-item {
+    text-align: center; /* Centrar el contenido en esta resolución */
+  }
+}
+
+/* Estilos para pantallas con una resolución de 375x542 */
+@media (min-width: 321px) and (max-width: 375px) {
+  .col-lg-6 {
+    width: 100%; /* Hacer que la columna ocupe todo el ancho en esta resolución */
+  }
+  .info-item {
+    text-align: center; /* Centrar el contenido en esta resolución */
+    font-size: 14px; /* Cambiar el tamaño de fuente en esta resolución */
+  }
+}
+ul.inline-list {
+  list-style-type: style none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  
+}
+
+ul.inline-list li {
+  display: inline;
+  margin-right: 10px; /* Ajusta el espacio entre los elementos si es necesario */
+  color: rgba(255, 255, 255, 0.6);
+  text-transform: uppercase;
+  
+}
+.construcciones h2{
+font-size: 32px;
+}
+/* Pantalla de 320x542 */
+@media (max-width: 320px) and (max-height: 542px) {
+  .construcciones h2 {
+    font-size: 16px; /* Tamaño de fuente personalizado para 320x542 */
+  }
+}
+/* Pantallas pequeñas (celulares) */
+@media (max-width: 575px) {
+  .construcciones h2 {
+    font-size: 20px; /* Tamaño de fuente para pantallas pequeñas (celulares) */
+  }
+}
+
+/* Pantallas medianas (tabletas pequeñas) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .construcciones h2 {
+    font-size: 28px; /* Tamaño de fuente para pantallas medianas (tabletas pequeñas) */
+  }
+}
+
+/* Pantallas medianas (tabletas grandes) */
+@media (min-width: 768px) and (max-width: 991px) {
+  .construcciones h2 {
+    font-size: 30px; /* Tamaño de fuente para pantallas medianas (tabletas grandes) */
+  }
+}
+
+/* Pantallas grandes (computadoras) */
+@media (min-width: 992px) {
+  .construccionesh2 {
+    font-size: 32px; /* Tamaño de fuente para pantallas grandes (computadoras) */
+  }
 }
